--- a/Microservice/PostService/Dockerfile
+++ b/Microservice/PostService/Dockerfile
@@ -2,21 +2,21 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-EXPOSE 8000
+EXPOSE 9000
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["UserService/UserService.csproj", "UserService/"]
-RUN dotnet restore "UserService/UserService.csproj"
+COPY ["PostService/PostService.csproj", "PostService/"]
+RUN dotnet restore "PostService/PostService.csproj"
 COPY . .
-WORKDIR "/src/UserService"
-RUN dotnet build "UserService.csproj" -c Release -o /app/build
+WORKDIR "/src/PostService"
+RUN dotnet build "PostService.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "UserService.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "PostService.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "UserService.dll"]
+ENTRYPOINT ["dotnet", "PostService.dll"]
