--- a/Microservice/UserService/appsettings.json
+++ b/Microservice/UserService/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiDatabase": "server=localhost; port=3306; database=stuff; uid=root;pwd=password;"
+    "WebApiDatabase": "server=host.docker.internal; port=3308; database=stuff; uid=user;pwd=password;",
+    "DefaultConnection": "Data Source=DESKTOP-***;Initial Catalog=RabitMQDemo;User Id=guest;Password=guest;"
   }
 }
